--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -21,7 +21,9 @@
     ],
     "paths": {
       "@/*": ["./*"],
-      "components/*": ["app/components/*"]
+      "components/*": ["app/components/*"],
+      "pages/*": ["app/pages/*"],
+      "layouts/*": ["app/layouts/*"]
     }
   },
   "include": [
